tentative blog fix

--- a/_config.yml
+++ b/_config.yml
@@ -126,12 +126,12 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 #permalink: /blog/:year/:title/
 
 # Pagination
-pagination:
-  enabled: true
+#pagination:
+#  enabled: true
 
-related_blog_posts:
-  enabled: true
-  max_related: 5
+#related_blog_posts:
+#  enabled: true
+#  max_related: 5
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out
