--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,6 @@
-"AJP":
+"SaTML":
   url: https://aapt.scitation.org/journal/ajp
   color: "#00369f"
 
-"PhysRev":
+"ASIA CCS":
   url: https://journals.aps.org/
