--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,4 +1,4 @@
-"Adams":
+"Stefano Calzavara":
   - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
     url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
 
