--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,8 +1,7 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
+    - name: Lorenzo Cazzaeo
     - name: Date of Birth
       value: 14th March 1879
     - name: Languages
