--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -29,3 +29,7 @@ color: "#00369f"
 "SaTML 2025":
   url: https://satml.org/2025/
   color: "#00369f"
+
+"DSN 2025":
+  url: https://dsn2025.github.io/
+  color: "#00369f"
